--- a/pages/camera/camera.wxss
+++ b/pages/camera/camera.wxss
@@ -3,7 +3,9 @@
 	top: 999px;
 	display: none;
 }
-
+.container{
+	position: relative;
+}
 .card-img-box,.album-img-box{
 	margin-top: 40px;
 }
@@ -33,6 +35,8 @@
 	position: relative;
 	left: 0;
 	right: 0;
+	top: 0;
+	bottom: 0;
 	margin: auto;
 }	
 .takePhoto{
@@ -42,4 +46,21 @@
 	background: red;
 	/* opacity: .5; */
 	color: transparent;
+}
+.focus-box{
+	/* position: absolute;
+	left: 50%;
+	top: 50%;
+	margin: -300rpx 0 0 -300rpx; */
+	/* z-index: 9999; */
+	text-align: center;
+}
+.focus{
+	/* position: absolute;
+	left: 50%;
+	top: 50%;
+	margin: -300rpx 0 0 -300rpx; */
+	width: 100%;
+	height: 600rpx;
+	margin: 0 auto;
 }
