--- a/pages/card/card.wxml
+++ b/pages/card/card.wxml
@@ -7,16 +7,17 @@
 			<!-- <button class="btn" lang="zh_CN" bindtap="onSave">保存</button> -->
 			<!-- <button class="btn" type=""  wx:else>保存</button> -->
 		<!-- </view> -->
-
 		<view class='main'>
 			<view class='main-content'>
 				<view class='card-logo-box'>
-					<image class='card-logo' src='{{formItem.cardImgUrl}}'></image>
+					<view class="pic">
+						<image class='card-logo' mode="widthFix" src='{{url}}' bindtap="handlePreview"></image>
+					</view>
 					<view class="btnBox">
 						<button type='default' class='export' open-type="getUserInfo" bindtap="exportCard" size='mini'>导 出</button>
 						<button type='default' size='mini' class='open' bindtap="openProgress">
 							<!-- <image class='open-logo' src='http://ii.sinelinked.com/miniProgramAssets/card-lg.png'></image> -->
-							柳梢声声
+							柳哨声声
 						</button>
 					</view>
 				</view>
@@ -28,41 +29,63 @@
 				</view>
 				<view class='common-box'>
 					<image class='card-tel' src='http://ii.sinelinked.com/miniProgramAssets/card-tel.png'></image>
-					<label>手机</label>
+					<label class="ad">手机</label>
 					<input type="number" class='tel' value='{{formItem.telCell}}' data-model="formItem.telCell" bindinput="inputWacth"/>
 					<image class='card-x' src='http://ii.sinelinked.com/miniProgramAssets/card-x.png'></image>
 				</view>
 				<view class='common-box'>
-					<label>添加号码</label>
+					<label class="ad">添加号码</label>
 					<input type="number" class='tel' value='{{formItem.telWork}}' data-model="formItem.telWork" bindinput="inputWacth"/>
 					<image class='card-x' src='http://ii.sinelinked.com/miniProgramAssets/card-+.png'></image>
 				</view>
 				<view class='common-box'>
 					<image class='card-email' src='http://ii.sinelinked.com/miniProgramAssets/card-email.png'></image>
-					<label>邮箱</label>
+					<label class="ad">邮箱</label>
 					<input type="text" class='tel' value='{{formItem.cardEmail}}' data-model="formItem.cardEmail" bindinput="inputWacth"/>
 					<image class='card-x' src='http://ii.sinelinked.com/miniProgramAssets/card-x.png'></image>
 				</view>
 				<view class='common-box'>
 					<image class='card-inter' src='http://ii.sinelinked.com/miniProgramAssets/card-inter.png'></image>
-					<label>部门</label>
+					<label class="ad">部门</label>
 					<input type="text" class='tel' value='{{formItem.cardDepartment}}' data-model="formItem.cardDepartment" bindinput="inputWacth" />
 				</view>
 				<view class='common-box'>
 					<image class='card-company' src='http://ii.sinelinked.com/miniProgramAssets/card-company.png'></image>
-					<label>公司</label>
+					<label class="ad">公司</label>
 					<input type="text" class='tel' value='{{formItem.cardCompany}}' data-model="formItem.cardCompany" bindinput="inputWacth" />
 					<image class='card-x' src='http://ii.sinelinked.com/miniProgramAssets/card-x.png'></image>
 				</view>
 				<view class='common-box'>
 					<image class='card-address' src='http://ii.sinelinked.com/miniProgramAssets/card-address.png'></image>
-					<label>地址</label>
+					<label class="ad">地址</label>
 					<input type="text" class='tel' value='{{formItem.cardAddr}}' data-model="formItem.cardAddr" bindinput="inputWacth" />
 					<image class='card-x' src='http://ii.sinelinked.com/miniProgramAssets/card-x.png'></image>
 				</view>
 				<view class='common-box'>
+					<image class='card-address' src='http://ii.sinelinked.com/miniProgramAssets/card-list.png'></image>
+					<label class="ad">分组</label>
+					<!-- <view class="bus-select"> -->
+						<!-- <view>
+							<view>请选择</view>
+							<image class='card-down' src='http://ii.sinelinked.com/miniProgramAssets/card-down.png'></image>
+						</view>
+						<view>
+							<view>工程类</view>
+						</view>
+						<view>
+							<view>化学类</view>
+						</view>
+						<view>
+							<view>工程类</view>
+						</view>
+						<view>
+							<view>化学类</view>
+						</view> -->
+					<!-- </view> -->
+				</view>
+				<view class='common-box'>
 					<image class='card-remark' src='http://ii.sinelinked.com/miniProgramAssets/card-remark.png'></image>
-					<label>备注</label>
+					<label class="ad">备注</label>
 					<input type="text" class='tel' placeholder='{{formItem.remark}}' data-model="formItem.remark" bindinput="inputWacth" />
 				</view>
 			</view>
