--- a/pages/card/card.wxss
+++ b/pages/card/card.wxss
@@ -28,11 +28,11 @@
 }
 .main{
   background: #f9f9f9;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 .main-content{
   width: 710rpx;
-  height: 1242rpx;
+  padding-bottom: 10rpx;
   margin: 36rpx auto 10rpx;
   background: #fff;
   border-radius: 14rpx;
@@ -41,12 +41,20 @@
 .card-logo-box{
   margin: 0 29rpx 0 45rpx;
 }
+.pic{
+	width: 400rpx;
+	height: 250rpx;
+	border-radius:15rpx;
+	margin-top:67rpx;
+	overflow: hidden;
+	border:1px solid #ccc;
+	display: inline-block;
+	position: relative;
+}
 .card-logo{
-  width: 400rpx;
-  height: 250rpx;
-  border-radius: 15rpx;
-  margin-top: 67rpx;
-	border: 1px solid #ccc;
+	position: absolute;
+	top: -96%;
+  width: 100%;
 }
 .btnBox{
 	float:right;
@@ -65,8 +73,6 @@
 	color: #fff;
 }
 .btnBox button::after{
-	/* background:#507eff; 
-	color: #fff; */
 	border:none;
 }
 .nameUser-box{
@@ -109,7 +115,39 @@ input{
   padding-left: 16rpx;
   font-size: 28rpx;
 }
-.common-box label{
+.common-box .bus-select{
+	display: inline-block;
+	font-size:28rpx;
+	width: 440rpx;
+	position: absolute;
+	right: 0;
+	top:0;
+	z-index:999;
+	/* border: 1px solid #333; */
+}
+.common-box .bus-select>view{
+	padding-left:16rpx;
+	color: #666;
+}
+.check-box{
+	width: 440rpx;
+	height: 68rpx;
+	border-bottom: 1px solid #e5e5e5;
+	position: absolute;
+	right: 0;
+	top: 18rpx;
+}
+.check-box label{
+	
+}
+.card-down{
+	width: 40rpx;
+	height: 40rpx;
+	position: absolute;
+	right: 5rpx;
+	top: 14rpx;
+}
+.common-box .ad{
   position: absolute;
   width: 142rpx;
   left: 50rpx;
@@ -153,34 +191,7 @@ input{
 	width: 710rpx;
 	margin: 0 auto;
 }
-/* .footer{
-  display: flex;
-  justify-content: space-between;
-  padding: 0 52rpx 50rpx;
-  background: #f9f9f9;
-}
-.footer button{
-  border-radius: 5rpx;
-  width: 268rpx;
-  height: 70rpx;
-  line-height: 70rpx;
-  box-sizing: border-box;
-  margin: 0;
-}
-.footer .export::after{
-  border-color:#507eff;
-}
-.footer .export{
-  background: #fff;
-  color: #4e8cee;
-}
-.footer .open::after{
-  border:none;
-}
-.footer .open{
-  color: #f9f9f9;
-  background: #507eff;
-} */
+
 .open-logo{
   width: 41rpx;
   height: 41rpx;
