--- a/pages/list/list.wxss
+++ b/pages/list/list.wxss
@@ -1,13 +1,21 @@
 /* pages/list/list.wxss */
+.container{
+	position: relative;
+}
 .header {
 	padding: 33rpx 20rpx 0;
 	height: 140rpx;
 	background: #f9f9f9;
 }
-
+.top{
+	height: 56rpx;
+	background: #e15671;
+	margin-bottom: 14rpx;
+}
 .search-top {
 	display: flex;
 	justify-content: space-between;
+	position: relative;
 }
 
 .search-btn {
@@ -44,7 +52,27 @@
 	display: flex;
 	align-items: center;
 }
-
+.list{
+	position: absolute;
+	z-index: 999;
+	background: #000;
+	opacity: .6;
+	color: #fff;
+	right: -10rpx;
+	top: 70rpx;
+	font-size: 24rpx;
+	width: 100rpx;
+	border-radius: 10rpx;
+	text-align: center;
+	line-height: 70rpx;
+}
+.list .last{
+	font-weight: bold;
+	font-size: 30rpx;
+}
+.list view{
+	border-bottom: 1px solid #ddd;
+}
 .add {
 	width: 28rpx;
 	height: 28rpx;
@@ -54,8 +82,8 @@
 .tel-people {
 	color: #a0a0a0;
 	line-height: 58rpx;
-	margin-top: 27rpx;
-	font-size: 22rpx;
+	margin-top: 26rpx;
+	font-size: 26rpx;
 	text-align: center;
 }
 
@@ -123,4 +151,34 @@
 
 .letter {
 	line-height: 40rpx;
+}
+/* mask */
+.mask{
+	position: fixed;
+	left:0;
+	top:0;
+	background: #000;
+	opacity: .7;
+	width: 100%;
+	height: 100vh;
+	z-index: 999999;
+	font-size: 24rpx;
+}
+.mask-con{
+	position: absolute;
+	left: 0;
+	right: 0;
+	top:300rpx;
+	margin: auto;
+	border-radius: 20rpx;
+	height: 400rpx;
+	width: 80%;
+	background: #fff;
+	z-index: 999999;
+	padding: 30rpx;
+}
+.mask-top{
+	text-align: center;
+	border-bottom: 1px solid #ddd;
+	line-height: 60rpx;
 }
