--- a/pages/card/card.wxss
+++ b/pages/card/card.wxss
@@ -1,251 +1,293 @@
 /* pages/card.wxss */
-.header{
-	height: 100rpx;
-	display: flex;
-	align-items: center;
-	border-bottom: 1px solid #ddd;
-	justify-content: flex-end;
-}
-.return-ico{
-	width: 40rpx;
-	height: 40rpx;
-  margin-right: auto;
-	margin-left: 34rpx;
-}
-.card-info{
-	font-size: 30rpx;
-	margin-right: 182rpx;
-}
-.btn{
-	margin: 0;
-	height: 50rpx;
-	font-size: 24rpx;
-	line-height: 50rpx;
-	margin-right: 27rpx;
-	background: #507eff;
-	color: #fff;
-	border:none;
-}
-.main{
-  background: #f9f9f9;
-  /* overflow: hidden; */
-}
-.main-content{
-  width: 710rpx;
-  padding-bottom: 10rpx;
-  margin: 36rpx auto 10rpx;
-  background: #fff;
-  border-radius: 14rpx;
-  box-shadow: 0 0 10px #999;
-}
-.card-logo-box{
-  margin: 0 29rpx 0 45rpx;
-}
-.pic{
-	width: 400rpx;
-	height: 250rpx;
-	border-radius:15rpx;
-	margin-top:67rpx;
-	overflow: hidden;
-	border:1px solid #ccc;
-	display: inline-block;
-	position: relative;
-}
-.card-logo{
-	position: absolute;
-	top: -96%;
-  width: 100%;
-}
-.btnBox{
-	float:right;
-	width: 174rpx;
-	height: 250rpx;
-	display: flex;
-	align-items: center;
-	flex-wrap: wrap;
-	margin-top: 67rpx; 
-}
-.btnBox button{
-	width: 174rpx;
-	display: block;
-	/* margin-bottom: 30rpx; */
-	background:#507eff;
-	color: #fff;
-}
-.btnBox button::after{
-	border:none;
-}
-.nameUser-box{
-  margin-top: 69rpx;
-}
-input{
-  width: 440rpx;
-  text-align: center;
-  border-bottom: 1px solid #e5e5e5;
-}
-.nameUser{
-  height: 60rpx;
-  line-height:60rpx;
-  margin: 0 auto;
-  color: #333;
-}
-.post-box{
-  margin-top: 29rpx;
-  margin-bottom: 47rpx;
-}
-.post{
-  margin: 0 auto;
-  height: 60rpx;
-  line-height: 60rpx;
-}
-.common-box{
-  margin: 22rpx 29rpx 0 45rpx;
-  position: relative;
-  line-height: 68rpx;
-  height: 68rpx;
-}
-.common-box input{
-  box-sizing: border-box;
-  display: inline-block;
-  position: absolute;
-  right: 0;
-  text-align: left;
-  line-height: 68rpx;
-  height: 68rpx;
-  padding-left: 16rpx;
-  font-size: 28rpx;
-}
-.common-box .bus-select{
-	display: inline-block;
-	font-size:28rpx;
-	width: 440rpx;
-	position: absolute;
-	right: 0;
-	top:0;
-	z-index:999;
-	/* border: 1px solid #333; */
-}
-.common-box .bus-select>view{
-	padding-left:16rpx;
-	color: #666;
-}
-.check-box{
-	width: 440rpx;
-	height: 68rpx;
-	border-bottom: 1px solid #e5e5e5;
-	position: absolute;
-	right: 0;
-	top: 18rpx;
-}
-.check-box label{
-	
-}
-.card-down{
-	width: 40rpx;
-	height: 40rpx;
-	position: absolute;
-	right: 5rpx;
-	top: 14rpx;
-}
-.common-box .ad{
-  position: absolute;
-  width: 142rpx;
-  left: 50rpx;
-  font-size: 28rpx;
-}
-.card-x{
-  width: 30rpx;
-  height: 30rpx;
-  position: absolute;
-  right: 0;
-  top: 18rpx;
-}
-.card-tel{
-  width: 31rpx;
-  height: 30rpx;
-}
-.card-email{
-  width: 30rpx;
-  height: 23rpx;
-}
-.card-inter{
-  width: 37rpx;
-  height: 29rpx;
-}
-.card-company{
-  width: 33rpx;
-  height: 28rpx;
-}
-.card-address{
-  width: 26rpx;
-  height: 32rpx;
-}
-.card-remark{
-  width: 26rpx;
-  height: 32rpx;
-}
-.footer{
-	background: #f9f9f9;
-}
-.footer button{
-	width: 710rpx;
-	margin: 0 auto;
+
+.header {
+    height: 100rpx;
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid #ddd;
+    justify-content: flex-end;
 }
 
-.open-logo{
-  width: 41rpx;
-  height: 41rpx;
-  border-radius: 50%;
-  border: 2rpx solid #fff;
-  margin-top: 13rpx;
-  vertical-align: top;
+.return-ico {
+    width: 40rpx;
+    height: 40rpx;
+    margin-right: auto;
+    margin-left: 34rpx;
 }
+
+.card-info {
+    font-size: 30rpx;
+    margin-right: 182rpx;
+}
+
+.btn {
+    margin: 0;
+    height: 50rpx;
+    font-size: 24rpx;
+    line-height: 50rpx;
+    margin-right: 27rpx;
+    background: #507eff;
+    color: #fff;
+    border: none;
+}
+
+.main {
+    background: #f9f9f9;
+    /* overflow: hidden; */
+}
+
+.main-content {
+    width: 710rpx;
+    padding-bottom: 10rpx;
+    margin: 36rpx auto 10rpx;
+    background: #fff;
+    border-radius: 14rpx;
+    box-shadow: 0 0 10px #999;
+}
+
+.card-logo-box {
+    margin: 0 29rpx 0 45rpx;
+}
+
+.pic {
+    width: 400rpx;
+    height: 250rpx;
+    border-radius: 15rpx;
+    margin-top: 67rpx;
+    overflow: hidden;
+    border: 1px solid #ccc;
+    display: inline-block;
+    position: relative;
+}
+
+.card-logo {
+    position: absolute;
+    top: -96%;
+    width: 100%;
+    transform: rotate(90deg);
+}
+
+.btnBox {
+    float: right;
+    width: 174rpx;
+    height: 250rpx;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    margin-top: 67rpx;
+}
+
+.btnBox button {
+    width: 174rpx;
+    display: block;
+    /* margin-bottom: 30rpx; */
+    background: #507eff;
+    color: #fff;
+}
+
+.btnBox button::after {
+    border: none;
+}
+
+.nameUser-box {
+    margin-top: 69rpx;
+}
+
+input {
+    width: 440rpx;
+    text-align: center;
+    border-bottom: 1px solid #e5e5e5;
+}
+
+.nameUser {
+    height: 60rpx;
+    line-height: 60rpx;
+    margin: 0 auto;
+    color: #333;
+}
+
+.post-box {
+    margin-top: 29rpx;
+    margin-bottom: 47rpx;
+}
+
+.post {
+    margin: 0 auto;
+    height: 60rpx;
+    line-height: 60rpx;
+}
+
+.common-box {
+    margin: 22rpx 29rpx 0 45rpx;
+    position: relative;
+    line-height: 68rpx;
+    height: 68rpx;
+}
+
+.common-box input {
+    box-sizing: border-box;
+    display: inline-block;
+    position: absolute;
+    right: 0;
+    text-align: left;
+    line-height: 68rpx;
+    height: 68rpx;
+    padding-left: 16rpx;
+    font-size: 28rpx;
+}
+
+.common-box .bus-select {
+    display: inline-block;
+    font-size: 28rpx;
+    width: 440rpx;
+    position: absolute;
+    right: 0;
+    top: 0;
+    z-index: 999;
+    /* border: 1px solid #333; */
+}
+
+.common-box .bus-select>view {
+    padding-left: 16rpx;
+    color: #666;
+}
+
+.check-box {
+    width: 440rpx;
+    height: 68rpx;
+    border-bottom: 1px solid #e5e5e5;
+    position: absolute;
+    right: 0;
+    top: 18rpx;
+}
+
+.check-box label {}
+
+.card-down {
+    width: 40rpx;
+    height: 40rpx;
+    position: absolute;
+    right: 5rpx;
+    top: 14rpx;
+}
+
+.common-box .ad {
+    position: absolute;
+    width: 142rpx;
+    left: 50rpx;
+    font-size: 28rpx;
+}
+
+.card-x {
+    width: 30rpx;
+    height: 30rpx;
+    position: absolute;
+    right: 0;
+    top: 18rpx;
+}
+
+.card-tel {
+    width: 31rpx;
+    height: 30rpx;
+}
+
+.card-email {
+    width: 30rpx;
+    height: 23rpx;
+}
+
+.card-inter {
+    width: 37rpx;
+    height: 29rpx;
+}
+
+.card-company {
+    width: 33rpx;
+    height: 28rpx;
+}
+
+.card-address {
+    width: 26rpx;
+    height: 32rpx;
+}
+
+.card-remark {
+    width: 26rpx;
+    height: 32rpx;
+}
+
+.footer {
+    background: #f9f9f9;
+}
+
+.footer button {
+    width: 710rpx;
+    margin: 0 auto;
+}
+
+.open-logo {
+    width: 41rpx;
+    height: 41rpx;
+    border-radius: 50%;
+    border: 2rpx solid #fff;
+    margin-top: 13rpx;
+    vertical-align: top;
+}
+
+
 /* mask */
-.mask{
-	width: 500rpx;
-	position: absolute;
-	left: 50%;
-	top: 50%;
-	margin-left: -250rpx;
-	margin-top: -62rpx;
-	z-index: 100;
+
+.mask {
+    width: 500rpx;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    margin-left: -250rpx;
+    margin-top: -62rpx;
+    z-index: 100;
 }
-.maskBox{
-	padding: 50rpx;
-	border: 1px solid #ddd;
-	border-radius: 10rpx;
-	height: 200rpx;
-	display: flex;
-	flex-wrap: wrap;
-	align-items: center;
-	background: #000;
-	opacity: .5;
+
+.maskBox {
+    padding: 50rpx;
+    border: 1px solid #ddd;
+    border-radius: 10rpx;
+    height: 200rpx;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    background: #000;
+    opacity: .5;
 }
-.maskBox .box{
-	width: 100%;
-	height: 50rpx;
-	display: flex;
-	align-items: center;
-	color: #fff;
-}	
-.card-sel{
-	width: 50rpx;
-	height: 50rpx;
-	margin-left: auto;
+
+.maskBox .box {
+    width: 100%;
+    height: 50rpx;
+    display: flex;
+    align-items: center;
+    color: #fff;
 }
-.card-close{
-	width: 50rpx;
-	height: 50rpx;
+
+.card-sel {
+    width: 50rpx;
+    height: 50rpx;
+    margin-left: auto;
 }
-.hide-x{
-	position: absolute;
-	right: -4rpx;
-	top: -4rpx;
+
+.card-close {
+    width: 50rpx;
+    height: 50rpx;
 }
-.pic-box{
-	padding: 0;
-	margin: 0;
-	margin-left: auto;
-	background: transparent;
-	line-height: 0;
+
+.hide-x {
+    position: absolute;
+    right: -4rpx;
+    top: -4rpx;
+}
+
+.pic-box {
+    padding: 0;
+    margin: 0;
+    margin-left: auto;
+    background: transparent;
+    line-height: 0;
 }
