--- a/pages/card/card.wxml
+++ b/pages/card/card.wxml
@@ -1,22 +1,15 @@
 <!--card.wxml-->
 <view class="container">
 	<view>
-		<!-- <view class="header"> -->
-			<!-- <image class="return-ico" src="http://ii.sinelinked.com/miniProgramAssets/card-newreturn.png" alt="" bindtap="navigateBack"></image> -->
-			<!-- <text class="card-info">名片信息</text> -->
-			<!-- <button class="btn" lang="zh_CN" bindtap="onSave">保存</button> -->
-			<!-- <button class="btn" type=""  wx:else>保存</button> -->
-		<!-- </view> -->
 		<view class='main'>
 			<view class='main-content'>
 				<view class='card-logo-box'>
 					<view class="pic">
-						<image class='card-logo' mode="widthFix" src='{{url}}' bindtap="handlePreview"></image>
+						<image class=" {{  is?'card-logo':'' }} " mode="widthFix" src='{{formItem.cardImgUrl}}' bindtap="handlePreview"></image>
 					</view>
 					<view class="btnBox">
 						<button type='default' class='export' open-type="getUserInfo" bindtap="exportCard" size='mini'>导 出</button>
 						<button type='default' size='mini' class='open' bindtap="openProgress">
-							<!-- <image class='open-logo' src='http://ii.sinelinked.com/miniProgramAssets/card-lg.png'></image> -->
 							柳哨声声
 						</button>
 					</view>
@@ -62,63 +55,26 @@
 					<image class='card-x' src='http://ii.sinelinked.com/miniProgramAssets/card-x.png'></image>
 				</view>
 				<view class='common-box'>
-					<image class='card-address' src='http://ii.sinelinked.com/miniProgramAssets/card-list.png'></image>
-					<label class="ad">分组</label>
-					<!-- <view class="bus-select"> -->
-						<!-- <view>
-							<view>请选择</view>
-							<image class='card-down' src='http://ii.sinelinked.com/miniProgramAssets/card-down.png'></image>
-						</view>
-						<view>
-							<view>工程类</view>
-						</view>
-						<view>
-							<view>化学类</view>
-						</view>
-						<view>
-							<view>工程类</view>
-						</view>
-						<view>
-							<view>化学类</view>
-						</view> -->
-					<!-- </view> -->
-				</view>
-				<view class='common-box'>
 					<image class='card-remark' src='http://ii.sinelinked.com/miniProgramAssets/card-remark.png'></image>
 					<label class="ad">备注</label>
 					<input type="text" class='tel' placeholder='{{formItem.remark}}' data-model="formItem.remark" bindinput="inputWacth" />
+				</view>
+				<view class='common-box fz'>
+					<view>	
+					<image class='card-address' src='http://ii.sinelinked.com/miniProgramAssets/card-list.png'></image>
+					<label class="ad">分组</label>
+					</view>	
+					<checkbox-group bindchange="checkboxChange">
+						<label class="checkbox" wx:for="{{items}}" wx:key="item.id" >
+							<checkbox class="cb"  value="{{item.id}}"  checked="{{item.checked}}" />
+							{{item.labelName}}
+						</label>
+					</checkbox-group>
 				</view>
 			</view>
 		</view>
 		<view class='footer'>
 			<button type='primary' bindtap="onSave">保 存</button>
-			<!-- <button type='default' class='export' bindtap="exportCard" size='mini'>导 出</button>
-			<button type='primary' size='mini' class='open' bindtap="openProgress">
-				<image class='open-logo' src='http://ii.sinelinked.com/miniProgramAssets/card-lg.png'></image>
-				打开柳梢声声
-			</button> -->
 		</view>
-		<!-- mask -->
-		<!-- <view class="mask" wx:if="{{mask}}" animation="{{animationData}}">
-			<view class="maskBox">
-				<view class="box">
-					导出到通讯录
-					<view class="pic-box" bindtap="handleBookClick">
-						<image class="card-sel" wx:if="{{exportBook}}" src="http://ii.sinelinked.com/miniProgramAssets/card-sel.png"></image>
-						<image class="card-sel" wx:else src="http://ii.sinelinked.com/miniProgramAssets/card-select.png"></image>
-					</view>
-				</view>
-				<view class="box">
-					导出到通用名片
-					<button class="pic-box" open-type="getUserInfo" bindtap="handleCardClick">
-						<image class="card-sel" wx:if="{{exportCard}}" src="http://ii.sinelinked.com/miniProgramAssets/card-sel.png"></image>
-						<image class="card-sel" wx:else src="http://ii.sinelinked.com/miniProgramAssets/card-select.png"></image>
-					</button>
-				</view>
-			</view>
-			<view class="hide-x" bindtap="handleClose">
-				<image class="card-close" src="http://ii.sinelinked.com/miniProgramAssets/close-circle.png"></image>
-			</view>
-		</view> -->
 	</view>
 </view>
