--- a/pages/camera/camera.wxml
+++ b/pages/camera/camera.wxml
@@ -5,7 +5,7 @@
 	<!-- camera.wxml -->
 
 	<camera wx:if="{{ isShow }}" class="camera" device-position="back" flash="auto" binderror="error" style="width: 100%;height: 100vh;">
-		<cover-view>
+		<cover-view class="content">
 			<cover-view class="card-img-box">
 				<navigator url='/pages/list/list'>
 					<cover-image class="card-img" src="http://ii.sinelinked.com/miniProgramAssets/card-ico.png"></cover-image>
