--- a/pages/camera/camera.wxss
+++ b/pages/camera/camera.wxss
@@ -16,11 +16,10 @@
 	height: 50px;
 	display: flex;
 	align-items: center;
-	background: #000;
+	background: rgba(0, 0, 0, .7);
 	justify-content: center;
 	margin-left: auto;
 	/* margin-right: 32px; */
-	opacity:.7;
 	border-radius: 5px;
 	top: 50rpx;
 }
@@ -29,11 +28,11 @@
 	height: 50px;
 	display: flex;
 	align-items: center;
-	background: #000;
+	background: rgba(0, 0, 0, .7);
 	justify-content: center;
 	margin-left: auto;
 	/* margin-right: 32px; */
-	opacity:.7;
+	
 	border-radius: 5px;
 	top: 200rpx;
 	
@@ -59,12 +58,34 @@
 	bottom: 30rpx;
 	/* text-align: center; */
 	border-radius: 50%;
-	width: 150rpx;
-	height: 150rpx;
+	width: 120rpx;
+	height: 120rpx;
 	background: #fff;
-	color: #fff;
-	/* margin: 100rpx auto; */
 }	
+.noir{
+	width: 100rpx;
+	height: 100rpx;
+	background: #000;
+	position: absolute;
+	left: 0;
+	right: 0;
+	top: 0;
+	bottom: 0;
+	margin: auto;
+	border-radius: 50%;
+}
+.white{
+	width: 90rpx;
+	height: 90rpx;
+	background: #fff;
+	position: absolute;
+	left: 0;
+	right: 0;
+	top: 0;
+	bottom: 0;
+	margin: auto;
+	border-radius: 50%;
+}
 .takePhoto-box button{
 	border-radius: 50%;
 	width: 100rpx;
