--- a/pages/card/card.wxml
+++ b/pages/card/card.wxml
@@ -10,7 +10,7 @@
 					<view class="btnBox">
 						<button type='default' class='export' open-type="getUserInfo" bindtap="exportCard" size='mini'>导 出</button>
 						<button type='default' size='mini' class='open' bindtap="openProgress">
-							柳哨声声
+							柳哨名片
 						</button>
 					</view>
 				</view>
