--- a/pages/card/card.wxss
+++ b/pages/card/card.wxss
@@ -59,12 +59,18 @@
     display: inline-block;
     position: relative;
 }
-
-.card-logo {
+.pic image{
+    width: 100%;
+    position: absolute;
+    width: 100%;
+    top: -96%;
+    transform: rotate(-90deg);
+}
+.pic .card-logo {
     position: absolute;
     top: -96%;
     width: 100%;
-    transform: rotate(90deg);
+    transform: rotate(-90deg);
 }
 
 .btnBox {
