--- a/pages/list/list.wxml
+++ b/pages/list/list.wxml
@@ -45,7 +45,7 @@
 		<scroll-view scroll-y="true" class='content'>
 			<view class='item' wx:for="{{cardList}}" wx:key="item">
 				<view class='initials'>{{index}}</view>
-				<view class='item-li' bindlongpress="handleShowMenu" data-id="{{item.id}}" data-cell="{{item.telCell}}" bindtap="getCardInfo" wx:for="{{item}}"
+				<view class='item-li' bindlongpress="handleShowMenu" data-id="{{item.id}}" data-cell="{{item.telCell}}" data-name="{{item.cardName}}" bindtap="getCardInfo" wx:for="{{item}}"
 				 wx:key="item">
 					<image class='user-logo' src='http://ii.sinelinked.com/miniProgramAssets/card-lg.png'></image>
 					<text class='userName'>{{item.cardName}}</text>
@@ -57,5 +57,13 @@
 		<scroll-view class='post-letter'>
 			<view class='letter' wx:for="{{letters}}" wx:key="{{id}}">{{item.title}}</view>
 		</scroll-view>
+	</view>
+
+	<view class="mask-show" hidden="{{menuShow}}" bindtap="handleMaskHide">
+		<view class="show-box">
+			<view><button bindtap="exportCard" open-type="getUserInfo">导出名片及通讯录</button></view>
+			<view><button bindtap="openProgress">柳哨名片</button></view>
+			<view><button bindtap="deleteUser">删除名片</button></view>
+		</view>
 	</view>
 </view>
