--- a/pages/list/list.wxss
+++ b/pages/list/list.wxss
@@ -247,3 +247,33 @@
     border-radius: 30rpx;
     color: #666;
 }
+/* mask show */
+.mask-show{
+    position:absolute;
+    width: 100%;
+    height: 100vh;
+    background: rgba(0, 0, 0, .7);
+    left: 0;
+    top: 0;
+    z-index: 9999;
+}
+.show-box{
+    width: 90%;
+    height: 300rpx;
+    background: #fff;
+    position: absolute;
+    left:50%;
+    top: 50%;
+    margin-left: -45%;
+    margin-top: -150rpx;
+    border-radius: 20rpx;
+}
+.show-box button{
+    background: #fff;
+    height: 100rpx;
+    color: #666;
+}
+.show-box button::after{
+    border: 0;
+    
+}
