--- a/pages/list/list.wxss
+++ b/pages/list/list.wxss
@@ -64,10 +64,10 @@
     background: #000;
     opacity: .6;
     color: #fff;
-    right: -10rpx;
+    right: -16rpx;
     top: 70rpx;
     font-size: 24rpx;
-    width: 100rpx;
+    width: 120rpx;
     border-radius: 10rpx;
     text-align: center;
     line-height: 70rpx;
@@ -247,33 +247,38 @@
     border-radius: 30rpx;
     color: #666;
 }
+
+
 /* mask show */
-.mask-show{
-    position:absolute;
+
+.mask-show {
+    position: absolute;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background: rgba(0, 0, 0, .7);
     left: 0;
     top: 0;
     z-index: 9999;
 }
-.show-box{
+
+.show-box {
     width: 90%;
     height: 300rpx;
     background: #fff;
     position: absolute;
-    left:50%;
+    left: 50%;
     top: 50%;
     margin-left: -45%;
     margin-top: -150rpx;
     border-radius: 20rpx;
 }
-.show-box button{
+
+.show-box button {
     background: #fff;
     height: 100rpx;
     color: #666;
 }
-.show-box button::after{
+
+.show-box button::after {
     border: 0;
-    
 }
