--- a/pages/camera/camera.wxml
+++ b/pages/camera/camera.wxml
@@ -6,15 +6,16 @@
 
 	<camera wx:if="{{ isShow }}" class="camera" device-position="back" flash="auto" binderror="error" style="width: 100%;height: 100vh;">
 		<cover-view class="content">
-			<cover-view class="card-img-box">
-				<navigator url='/pages/list/list'>
-					<cover-image class="card-img" src="http://ii.sinelinked.com/miniProgramAssets/card-ico.png"></cover-image>
-				</navigator>
+			<cover-view class="pic-box">
+				<cover-view class="card-img-box">
+					<navigator url='/pages/list/list'>
+						<cover-image class="card-img" src="http://ii.sinelinked.com/miniProgramAssets/card-ico.png"></cover-image>
+					</navigator>
+				</cover-view>
+				<cover-view class="album-img-box">
+					<cover-image class="album-img" src="http://ii.sinelinked.com/miniProgramAssets/album-ico.png" bindtap="openAlbum"></cover-image>
+				</cover-view>
 			</cover-view>
-			<cover-view class="album-img-box">
-				<cover-image class="album-img" src="http://ii.sinelinked.com/miniProgramAssets/album-ico.png" bindtap="openAlbum"></cover-image>
-			</cover-view>
-			
 			<cover-view class="focus-box">
 				<cover-image class="focus" src="http://ii.sinelinked.com/miniProgramAssets/card-focus.png"></cover-image>
 			</cover-view>
